--- a/extensions/SyntaxHighlight_GeSHi/README
+++ b/extensions/SyntaxHighlight_GeSHi/README
@@ -1,6 +1,6 @@
 This extension allows source code to be syntax highlighted on the wiki pages.
 This README file might be out of date, have a look at the extension page
-for updated informations:
+for updated information:
 
     https://www.mediawiki.org/wiki/Extension:SyntaxHighlight_GeSHi
 
